--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
+        setProperty("archivesBaseName", "bus-stop-" + versionName)
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
