--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
 - adb shell input keyevent 82 &
 script:
   - ./gradlew build connectedCheck
-  - ./gradlew assembleDebug
+  - ./gradlew clean assembleDebug
 before_install:
 - chmod +x gradlew
 before_deploy:
